[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/interface/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/fonts/The-Fozderien.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/fonts/JetpackJoe.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/interface/HowToPlayMenu.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.470588 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.133333, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.2, 0, 0.266667, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=8]
size = 46
font_data = ExtResource( 3 )

[node name="PauseMenu" type="CanvasLayer"]
layer = 4
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkOpacity" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -150.0
margin_right = 120.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayMenu" parent="Control/PausePanel" instance=ExtResource( 4 )]

[node name="HowToPlayButton" type="Button" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 21.0
margin_right = 100.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( -91, -31 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "COMO JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -12.0
margin_right = 100.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( -91, -31 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "VOLVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 53.0
margin_right = 100.0
margin_bottom = 77.0
rect_pivot_offset = Vector2( -91, -31 )
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_focus = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_colors/font_color_pressed = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "SALIR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PausePanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.933333, 0.933333, 0.933333, 1 )
custom_fonts/font = SubResource( 8 )
text = "PAUSA ..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/PausePanel/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="Control/PausePanel/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Control/PausePanel/ExitButton" to="." method="_on_ExitButton_pressed"]
